// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoyaltyFooterSection View Component ProductDetailSection true should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <span>
    <span
      className="applyNowLink"
    >
      <Connect(ApplyNowModalWrapper)
        step={2}
      />
    </span>
    <Connect(ApplyNowModalWrapper) />
  </span>
</div>
`;

exports[`LoyaltyFooterSection View Component is not ProductDetailView should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Connect(ApplyNowModalWrapper)
          step={2}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(BodyCopy)
          className="symbolWrapper"
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs9"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
        <Connect(ApplyNowModalWrapper) />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isAddedToBagPage & earnedReward true should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Connect(ApplyNowModalWrapper)
          step={2}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(BodyCopy)
          className="symbolWrapper"
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs9"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
        <Connect(ApplyNowModalWrapper) />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isAddedToBagPage & isGuest true should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span>
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore"
          fontSizeVariation="medium"
          onClick={[Function]}
          underline={true}
        />
      </span>
      <span
        className="elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore"
          fontSizeVariation="medium"
          onClick={[Function]}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isAddedToBagPage & isPlcc true should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <span
    className="links-wrapper"
  >
    <Connect(ApplyNowModalWrapper) />
  </span>
</div>
`;

exports[`LoyaltyFooterSection View Component isAddedToBagPage true should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Connect(ApplyNowModalWrapper)
          step={2}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(BodyCopy)
          className="symbolWrapper"
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs9"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
        <Connect(ApplyNowModalWrapper) />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isConfirmationPage && earnedRewardAvailable should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span>
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore"
          fontSizeVariation="medium"
          onClick={[Function]}
          underline={true}
        />
      </span>
      <span
        className="elem-pl-XL"
      >
        <Styled(Anchor)
          anchorVariation="primary"
          className="learnMore"
          fontSizeVariation="medium"
          onClick={[Function]}
          underline={true}
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isConfirmationPage && earnedRewardAvailable should render correctly 2`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Connect(ApplyNowModalWrapper)
          step={2}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(BodyCopy)
          className="symbolWrapper"
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs9"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
        <Connect(ApplyNowModalWrapper) />
      </span>
    </span>
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isConfirmationPage true should render correctly 1`] = `
<div
  className=" footerWrapper"
/>
`;

exports[`LoyaltyFooterSection View Component isPlcc & isReviewPage true should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <Connect(ApplyNowModalWrapper) />
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isPlcc true should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <Connect(ApplyNowModalWrapper) />
  </div>
</div>
`;

exports[`LoyaltyFooterSection View Component isProductDetailView && isGuest should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <span>
    <Styled(Anchor)
      anchorVariation="primary"
      className="learnMore"
      fontSizeVariation="medium"
      onClick={[Function]}
      underline={true}
    />
    <Styled(Anchor)
      anchorVariation="primary"
      className="learnMore"
      fontSizeVariation="medium"
      onClick={[Function]}
      underline={true}
    />
  </span>
</div>
`;

exports[`LoyaltyFooterSection View Component isProductDetailView && plcc && isGuest should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <Connect(ApplyNowModalWrapper) />
</div>
`;

exports[`LoyaltyFooterSection View Component isProductDetailView should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <span>
    <span
      className="applyNowLink"
    >
      <Connect(ApplyNowModalWrapper)
        step={2}
      />
    </span>
    <Connect(ApplyNowModalWrapper) />
  </span>
</div>
`;

exports[`LoyaltyFooterSection View Component not isPlcc should render correctly 1`] = `
<div
  className=" footerWrapper"
>
  <div
    className="links-wrapper"
  >
    <span
      className="links-container"
    >
      <span
        className="applyNowLink"
      >
        <Connect(ApplyNowModalWrapper)
          step={2}
        />
      </span>
      <span
        className="learnSymbolWrapper elem-pl-XL"
      >
        <Styled(BodyCopy)
          className="symbolWrapper"
          color="text.primary"
          component="span"
          fontFamily="secondary"
          fontSize="fs9"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          link={null}
          textAlign="left"
        />
        <Connect(ApplyNowModalWrapper) />
      </span>
    </span>
  </div>
</div>
`;
